# AdventOfCode2025

./: CMakeLists.txt
src/: main.cpp
src/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day1.cpp
src/utils/: input.hpp  print.hpp
